--- a/src/app/styles/fonts.css
+++ b/src/app/styles/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Red Hat Text";
-  src: url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap');
+  src: url("../../../public/assets/fonts/RedHatText-Bold.ttf") format("ttf");
   font-weight: 700;
   font-style: normal;
   font-display: block;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "Inter";
-  src: url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap');
+  src: url("../../../public/assets/fonts/Inter_24pt-Medium.ttf") format("ttf");
   font-weight: 500;
   font-style: normal;
   font-display: block;
