--- a/src/shared/ui/ButtonDefault/ButtonDefault.css
+++ b/src/shared/ui/ButtonDefault/ButtonDefault.css
@@ -36,3 +36,10 @@
     box-shadow: 0px 0px 20px rgba(63, 99, 192, 0.3);    
     color: #ffffff;
 }
+
+.Red {
+
+    background: linear-gradient(95.29deg, rgba(255, 255, 255, 0.2) 1.93%, rgba(255, 255, 255, 0) 97.62%), #EB2F2F;
+    color: #ffffff;
+    
+}
