--- a/src/widgets/MainWindow/MainWindow.css
+++ b/src/widgets/MainWindow/MainWindow.css
@@ -11,8 +11,7 @@
 .MainWindow {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    gap: 24px;
+    justify-content: flex-start;
 }
 
 .MainWindow-left {
@@ -21,5 +20,49 @@
     flex-direction: column;
     margin-top: 24px;
     margin-left: 42px;
+    margin-right: 24px;
     align-items: flex-start;
+    gap: 24px;
+}
+
+.MainWindow-line {
+    width: 1px;
+    height: 100%;
+    background-color: #000000;
+    mix-blend-mode: overlay;
+    opacity: 0.4;
+}
+
+.MainWindow-right {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 24px;
+    margin-left: 24px;
+    margin-right: 42px;
+    align-items: flex-start;
+    gap: 24px;
+}
+
+.MainWindow-right-info {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.MainWindow-right-info-search {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+}
+
+.MainWindow-right-info-add {
+    display: flex;
+    flex-direction: row;
+}
+
+.MainWindow-right-info-search-wrap {
+    height: 26px;
+    width: 224px;
 }
