--- a/src/shared/ui/Background/styles.module.scss
+++ b/src/shared/ui/Background/styles.module.scss
@@ -1,4 +1,4 @@
-.Background {
+.background {
     
     position: absolute;
     width: 2133.1px;
@@ -8,7 +8,7 @@
 
 }
 
-.Background-top-left {
+.topleft {
 
     position: absolute;
     width: 796.99px;
@@ -21,7 +21,7 @@
 
 }
 
-.Background-top-right {
+.topright {
     position: absolute;
     width: 2409.75px;
     height: 444.19px;
@@ -31,7 +31,7 @@
     z-index: 1;
 }
 
-.Background-bottom-left {
+.bottomleft {
 
     position: absolute;
     width: 1896.99px;
@@ -42,7 +42,7 @@
 
 }
 
-.Background-bottom-right {
+.bottomright {
 
     position: absolute;
     width: 789.93px;
