--- a/src/app/styles/fonts.scss
+++ b/src/app/styles/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Red Hat Text";
-  src: url("../../../public/assets/fonts/RedHatText-Bold.ttf") format("ttf");
+  src: url("../../../public/assets/fonts/RedHatText-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: block;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("../../../public/assets/fonts/Inter_24pt-Medium.ttf") format("ttf");
+  src: url("../../../public/assets/fonts/Inter-Medium.woff2") format("woff2");
   font-weight: 500;
   font-style: normal;
   font-display: block;
