--- a/src/shared/ui/ButtonInput/styles.module.scss
+++ b/src/shared/ui/ButtonInput/styles.module.scss
@@ -1,5 +1,6 @@
-.ButtonInput {
+.default {
     width: 100%;
+    height: 26px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -13,7 +14,7 @@
     color: #333;
 }
 
-.ButtonInput-text {
+.text {
     font-size: 12px;
     color: #606060;
 }
